feat: Refactor dashboard page to use custom API hooks and improve user data handling
fix: Update NotFound component to use HTML entities for apostrophes

feat: Enhance SignIn and SignUp pages to handle extension-specific logic

refactor: Improve CvAnalysisHistory and CvAnalysisResults components with proper typing

chore: Remove unused feature gate props in UpgradePrompt component

chore: Simplify middleware configuration for Clerk authentication

chore: Update TypeScript paths in tsconfig for better module resolution

chore: Add example environment variables for the extension

docs: Create README for Jobloom Chrome Extension with setup instructions

feat: Implement constants for default URLs in the extension

feat: Add API routes for applications, contacts, CV analysis, and sponsorship management

feat: Create custom hooks for API queries and mutations

chore: Implement a base API client for handling Convex API requests

feat: Define types for Convex data models and improve type safety

feat: Add utility functions for admin and contact APIs

chore: Update Vercel configuration for deployment

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "npm run lint --workspaces",
     "test": "npm run test --workspaces",
     "convex:deploy": "npm run build -w packages/convex",
-    "convex:codegen": "npm run codegen -w packages/convex"
+    "convex:codegen": "npm run codegen -w packages/convex",
+    "vercel-build": "npm run build -w packages/web"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
