--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,7 +11,7 @@
     "vercel-build": "next build"
   },
   "dependencies": {
-    "@jobloom/convex": "workspace:*",
+    "@jobloom/convex": "file:../convex",
     "@clerk/nextjs": "^6.0.0",
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.0.0",
