feat: integrate Clerk authentication into extension popup
- Added Clerk JS library to manifest and package dependencies.
- Implemented dynamic loading of Clerk components for sign-in and sign-up.
- Updated popup HTML to include Clerk components and authentication buttons.
- Refactored authentication logic to use Clerk's API for user management.
- Enhanced user experience with smooth scrolling in global styles.

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -8,9 +8,11 @@
     "build": "webpack --mode production",
     "build:dev": "CONVEX_URL=https://rare-chihuahua-615.convex.cloud WEB_APP_URL=http://localhost:3000 webpack --mode production",
     "build:prod": "CONVEX_URL=https://rare-chihuahua-615.convex.cloud WEB_APP_URL=https://jobloom.ai webpack --mode production",
+    "build:test": "cp .env.test .env && webpack --mode production",
     "lint": "eslint src --ext .ts,.js"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^6.0.0",
     "convex": "^1.0.0"
   },
   "devDependencies": {
