--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -12,19 +12,19 @@
     "lint": "eslint src --ext .ts,.js"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^6.0.0",
+    "@clerk/clerk-js": "^5.81.0",
     "convex": "^1.0.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.246",
     "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "dotenv-webpack": "^8.0.0",
+    "eslint": "^8.45.0",
     "ts-loader": "^9.4.0",
     "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0",
-    "eslint": "^8.45.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
+    "webpack-cli": "^5.1.0"
   }
 }
