--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^3.0.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
