--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,28 +29,30 @@
     "@radix-ui/react-tooltip": "^1.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "firebase-admin": "^12.0.0",
     "csv-parse": "^6.1.0",
     "date-fns": "^3.0.0",
     "firebase": "^12.1.0",
+    "firebase-admin": "^12.0.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "15.3.4",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "next": "15.3.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@types/node": "^20",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
