--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -11,7 +11,31 @@
     "build:test": "cp .env.test .env && webpack --mode production",
     "lint": "eslint src --ext .ts,.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@tiptap/extension-character-count": "^3.4.4",
+    "@tiptap/extension-code-block": "^3.4.4",
+    "@tiptap/extension-code-block-lowlight": "^3.4.4",
+    "@tiptap/extension-color": "^3.4.4",
+    "@tiptap/extension-highlight": "^3.4.4",
+    "@tiptap/extension-image": "^3.4.4",
+    "@tiptap/extension-link": "^3.4.4",
+    "@tiptap/extension-placeholder": "^3.4.4",
+    "@tiptap/extension-subscript": "^3.4.4",
+    "@tiptap/extension-superscript": "^3.4.4",
+    "@tiptap/extension-table": "^3.4.4",
+    "@tiptap/extension-table-cell": "^3.4.4",
+    "@tiptap/extension-table-header": "^3.4.4",
+    "@tiptap/extension-table-row": "^3.4.4",
+    "@tiptap/extension-text-align": "^3.4.4",
+    "@tiptap/extension-text-style": "^3.4.4",
+    "@tiptap/extension-underline": "^3.4.4",
+    "@tiptap/pm": "^3.4.4",
+    "@tiptap/react": "^3.4.4",
+    "@tiptap/starter-kit": "^3.4.4",
+    "class-variance-authority": "^0.7.1",
+    "lowlight": "^3.3.0"
+  },
   "devDependencies": {
     "@types/chrome": "^0.0.246",
     "@types/node": "^20.0.0",
