--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,6 +29,10 @@
     "@radix-ui/react-tooltip": "^1.1.16",
     "@tiptap/extension-character-count": "^3.4.4",
     "@tiptap/extension-placeholder": "^3.4.4",
+    "@tiptap/extension-table": "^3.4.4",
+    "@tiptap/extension-table-header": "^3.4.4",
+    "@tiptap/extension-table-row": "^3.4.4",
+    "@tiptap/extension-text-align": "^3.4.4",
     "@tiptap/react": "^3.4.4",
     "@tiptap/starter-kit": "^3.4.4",
     "class-variance-authority": "^0.7.1",
