Refactor project name from Jobloom to HireAll across all relevant files
- Updated package.json, README.md, and other configuration files to reflect the new project name.
- Changed references in the Chrome extension manifest and related files to align with the new branding.
- Adjusted email addresses and links to use the new domain hireall.app.
- Removed outdated jobloom assets and updated file paths accordingly.
- Enhanced OAuth configuration and added new authentication buttons in the extension UI.

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ Thumbs.db
 # Extension builds
 packages/extension/dist/
 packages/web/jobloom-6a4cd-firebase-adminsdk-fbsvc-aed875c457.json
+packages/web/hireall-4f106-firebase-adminsdk-fbsvc-2e91c28cd6.json
