--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Jobloom - Job Tracker",
+  "name": "HireAll - Job Tracker",
   "version": "1.0.0",
   "description": "Highlight sponsored job roles and track applications",
-  "permissions": ["activeTab", "storage", "scripting"],
+  "permissions": ["activeTab", "storage", "scripting", "identity"],
   "host_permissions": [
     "https://*.linkedin.com/*",
     "https://*.indeed.com/*",
@@ -15,10 +15,9 @@
     "https://*.totaljobs.com/*",
     "https://*.reed.co.uk/*",
     "https://*.jobsite.co.uk/*",
-    "http://localhost:*/*",
     "https://*.vercel.app/*",
     "https://*.netlify.app/*",
-  "https://jobloom.ai/*"
+    "https://hireall.app/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -42,21 +41,24 @@
     },
     {
       "matches": [
-        "http://localhost:*/*",
         "https://*.vercel.app/*",
         "https://*.netlify.app/*",
-        "https://jobloom.ai/*"
+        "https://hireall.app/*"
       ],
       "js": ["webapp-content.js"]
     }
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "JobloomMonorepo Job Tracker"
+    "default_title": "HireAll Job Tracker"
   },
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "oauth2": {
+    "client_id": "OAUTH_CLIENT_ID_PLACEHOLDER",
+    "scopes": ["openid", "email", "profile"]
   }
 }
