--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "dev:extension": "npm run dev -w packages/extension",
     "dev:all": "concurrently \"npm run dev:web\" \"npm run dev:extension\"",
     "build": "npm run build -w packages/web && npm run build -w packages/extension",
-  "lint": "npm run lint -w packages/web",
+    "lint": "npm run lint -w packages/web",
     "test": "npm run test -w packages/web || true && npm run test -w packages/extension || true",
     "vercel-build": "npm run build -w packages/web"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "concurrently": "^8.2.2"
+    "@types/node-fetch": "^2.6.13",
+    "concurrently": "^8.2.2",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
