--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -37,7 +37,8 @@
     "@tiptap/react": "^3.4.4",
     "@tiptap/starter-kit": "^3.4.4",
     "class-variance-authority": "^0.7.1",
-    "lowlight": "^3.3.0"
+    "lowlight": "^3.3.0",
+    "lucide-react": "^0.539.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.246",
