--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -52,6 +52,7 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.18.2",
+    "google-auth-library": "^9.15.1",
     "lucide-react": "^0.539.0",
     "next": "15.3.4",
     "pdf-parse": "^1.1.1",
