--- a/packages/web/firebase.json
+++ b/packages/web/firebase.json
@@ -7,5 +7,12 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "firestore": {
+    "indexes": "firestore.indexes.json",
+    "rules": "firestore.rules"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
