--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -53,6 +53,7 @@
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.18.2",
     "google-auth-library": "^9.15.1",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
     "next": "15.3.4",
     "pdf-parse": "^1.1.1",
