--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint",
     "build:ignore-types": "next build --no-lint",
     "vercel-build": "next build",
-    "migrate-data": "node migrate-to-firestore.js"
+    "migrate-data": "node migrate-to-firestore.js",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug",
+    "test:run": "node tests/run-tests.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -66,6 +71,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.55.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
