--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,9 @@
     "test:run": "node tests/run-tests.js"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
