Update extension manifest and configuration for Firebase integration
🔧 Changes Made:
- Removed OAuth2 configuration from `manifest.json` as Firebase Authentication is now used directly.
- Updated permissions in `manifest.json` to exclude unnecessary identity permissions.
- Added Firebase as a dependency in `package.json` for authentication functionality.
- Refactored background and popup scripts to utilize Firebase for user authentication.
- Enhanced error handling in job and follow-up API interactions to improve user experience.

🎯 This update streamlines the authentication process and reduces complexity by leveraging Firebase directly, enhancing the overall functionality of the extension.

--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "HireAll - Job Tracker",
   "version": "1.0.0",
   "description": "Highlight sponsored job roles and track applications",
-  "permissions": ["activeTab", "storage", "scripting", "identity"],
+  "permissions": ["activeTab", "storage", "scripting"],
   "host_permissions": [
     "https://*.linkedin.com/*",
     "https://*.indeed.com/*",
@@ -56,9 +56,5 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  },
-  "oauth2": {
-    "client_id": "OAUTH_CLIENT_ID_PLACEHOLDER",
-    "scopes": ["openid", "email", "profile"]
   }
 }
