--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "vercel-build": "npm run build -w packages/web"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.8.1",
     "@types/node-fetch": "^2.6.13",
     "concurrently": "^8.2.2",
     "typescript": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">=20.0.0 <23.0.0",
     "npm": ">=9.0.0"
   }
 }
