--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -69,25 +69,27 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.4.1",
-    "stripe": "^18.5.0",
-    "tailwind-merge": "^2.6.0"
+  "stripe": "^18.5.0",
+  "tailwind-merge": "^2.6.0",
+  "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.55.1",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22.8.1",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "engines": {
-    "node": ">=20.0.0 <21"
+    "node": ">=20.0.0 <23.0.0"
   }
 }
