feat: Enhance job tracking and subscription management features
- Added LinkedIn URL validation for job additions in the extension's background script.
- Updated job tracking logic to ensure only LinkedIn job URLs are processed.
- Refactored job site detection to return 'unsupported' for non-LinkedIn sites.
- Improved job data structure to include metadata for remote work and seniority levels.
- Enhanced subscription management with new actions for customer portal and checkout URLs.
- Updated subscription state handling to include new properties for better user experience.
- Introduced feedback mechanisms for subdomain settings, including availability checks and suggestions.

This update improves the overall functionality and user experience of the job tracking and subscription management features.

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -54,6 +54,7 @@
     "@tiptap/extension-text-style": "^3.4.4",
     "@tiptap/react": "^3.4.4",
     "@tiptap/starter-kit": "^3.4.4",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
@@ -69,9 +70,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.4.1",
-  "stripe": "^18.5.0",
-  "tailwind-merge": "^2.6.0",
-  "tailwindcss-animate": "^1.0.7"
+  "resend": "^3.4.0",
+    "stripe": "^18.5.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -82,7 +84,6 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "postcss": "^8.4.41",
