--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "engines": {
     "node": ">=20.0.0 <23.0.0",
     "npm": ">=9.0.0"
+  },
+  "dependencies": {
+    "@anthropic-ai/claude-code": "^2.0.1"
   }
 }
