--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -75,7 +75,7 @@
     "jspdf": "^3.0.3",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "pdf-parse": "^1.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -102,7 +102,7 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "^16.0.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.41",
