--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
-    "@anthropic-ai/claude-code": "^2.0.1"
+    "@anthropic-ai/claude-code": "^2.0.1",
+    "stripe": "^18.5.0"
   }
 }
