--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "tsc --noEmit && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "lint:strict": "eslint src --max-warnings 0",
     "build:ignore-types": "next build --no-lint",
     "vercel-build": "next build",
     "migrate-data": "node migrate-to-firestore.js",
@@ -75,7 +77,7 @@
     "jspdf": "^3.0.3",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
-    "next": "^16.0.7",
+    "next": "^16.0.8",
     "pdf-parse": "^1.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -88,6 +90,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.30.0",
+    "@next/eslint-plugin-next": "^16.0.8",
     "@playwright/test": "^1.55.1",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
@@ -102,13 +106,16 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9",
-    "eslint-config-next": "^16.0.7",
+    "eslint-config-next": "^16.0.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.14",
     "ts-jest": "^29.4.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.49.0"
   },
   "engines": {
     "node": ">=20.0.0 <23.0.0"
