--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -25,8 +25,15 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "stripe": [
+        "../../node_modules/stripe"
       ]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@types",
+      "../../node_modules/@types"
+    ]
   },
   "include": [
     "next-env.d.ts",
