--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -3,7 +3,11 @@
   "name": "HireAll - Job Tracker",
   "version": "1.0.2",
   "description": "LinkedIn job sponsored highlighting and application tracking",
-  "permissions": ["activeTab", "storage", "tabs"],
+  "permissions": ["activeTab", "storage", "tabs", "identity"],
+  "oauth2": {
+    "client_id": "105444066046533758791.apps.googleusercontent.com",
+    "scopes": ["openid", "email", "profile"]
+  },
   "host_permissions": [
     "https://*.linkedin.com/*",
     "https://*.hireall.app/*"
