feat: Overhaul dashboard with new components and keyboard shortcuts, refactor ATS logic, and introduce AI services, email notifications, and resume PDF generation.

--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -2,5 +2,11 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "crons": [
+    {
+      "path": "/api/email/weekly-digest",
+      "schedule": "0 9 * * 1"
+    }
+  ]
 }
