--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "tsc --noEmit && next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
@@ -45,6 +46,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.1.16",
+    "@reactour/tour": "^3.8.0",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-character-count": "^3.4.4",
     "@tiptap/extension-code-block-lowlight": "^3.4.4",
@@ -78,6 +80,7 @@
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
     "next": "^16.0.8",
+    "next-sitemap": "^4.2.3",
     "pdf-parse": "^1.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
