--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -6,7 +6,10 @@
   "permissions": ["activeTab", "storage", "tabs", "identity"],
   "oauth2": {
     "client_id": "435727249201-m7shub7jknip68ajqh98c9vddq2m9qj5.apps.googleusercontent.com",
-    "scopes": ["openid", "email", "profile"]
+    "scopes": [
+      "https://www.googleapis.com/auth/userinfo.email",
+      "https://www.googleapis.com/auth/userinfo.profile"
+    ]
   },
   "host_permissions": [
     "https://*.linkedin.com/*",
