--- a/.gitignore
+++ b/.gitignore
@@ -99,5 +99,9 @@ Thumbs.db
 packages/extension/dist/
 packages/web/jobloom-6a4cd-firebase-adminsdk-fbsvc-aed875c457.json
 packages/web/hireall-4f106-firebase-adminsdk-fbsvc-2e91c28cd6.json
+**/*-firebase-adminsdk-*.json
+**/*firebase-adminsdk*.json
+**/service-account*.json
+**/*service_account*.json
 *temp-key.json
 1753683755292-30b3431f487b4cc1863e57a81d78e289.sh
