--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "dev:web": "npm run dev -w packages/web",
     "dev:extension": "npm run dev -w packages/extension",
     "dev:all": "concurrently \"npm run dev:web\" \"npm run dev:extension\"",
-    "build": "npm run build -w packages/web && npm run build -w packages/extension",
+    "build:shared": "npm run build -w packages/shared",
+    "build": "npm run build:shared && npm run build -w packages/web && npm run build -w packages/extension",
     "lint": "npm run lint -w packages/web",
     "test": "npm run test -w packages/web || true && npm run test -w packages/extension || true",
-    "vercel-build": "npm run build -w packages/web"
+    "vercel-build": "npm run build:shared && npm run build -w packages/web"
   },
   "devDependencies": {
     "@types/node": "^22.8.1",
