--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -5,6 +5,7 @@
   "version": "1.0.2",
   "description": "Track job applications, detect sponsored LinkedIn listings, analyze UK visa sponsorship eligibility, and sync your job search across devices.",
   "homepage_url": "https://hireall.app",
+  "privacy_policy_url": "https://hireall.app/privacy",
   "permissions": ["activeTab", "storage", "tabs", "identity"],
   "oauth2": {
     "client_id": "435727249201-m7shub7jknip68ajqh98c9vddq2m9qj5.apps.googleusercontent.com",
