--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "cd ../shared && npm run build",
     "build": "tsc --noEmit && next build",
     "postbuild": "next-sitemap",
     "start": "next start",
