--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -82,6 +82,7 @@
     "jspdf": "^3.0.3",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.539.0",
+    "marked": "^17.0.1",
     "next": "^16.0.8",
     "next-sitemap": "^4.2.3",
     "pdf-parse": "^1.1.1",
