Add unit tests for rate limiting, UI components, hooks, spam detection, and subscriptions
- Implement tests for the rate limiter functionality in the extension.
- Create Jest configuration for the web package.
- Add tests for base UI components including Button, Badge, and Input.
- Develop tests for custom hooks: useEnhancedApi and useJobManagement.
- Introduce tests for spam detection logic.
- Add tests for subscription management and interactions with Firebase.
- Implement tests for AI parsers and ATS scoring service.

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,8 @@
     "vercel-build": "cd ../shared && npm run build && cd ../web && next build",
     "migrate-data": "node migrate-to-firestore.js",
     "test": "playwright test",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
