feat: Expand ATS keyword definitions with new roles, add Jest testing for scoring service, and remove old utility scripts.**

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -109,6 +109,7 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^4.2.1"
   },
   "devDependencies": {
