--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/email/weekly-digest",
       "schedule": "0 9 * * 1"
+    },
+    {
+      "path": "/api/admin/feedback/process",
+      "schedule": "0 0 * * *"
     }
   ]
 }
