--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -57,6 +57,8 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reactour/tour": "^3.8.0",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-character-count": "^3.4.4",
     "@tiptap/extension-code-block-lowlight": "^3.4.4",
@@ -78,6 +80,8 @@
     "@tiptap/starter-kit": "^3.4.4",
     "@types/canvas-confetti": "^1.9.0",
     "@types/jspdf": "^1.3.3",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.36.0",
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -97,6 +101,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
+    "posthog-js": "^1.311.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.1",
