--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -110,6 +110,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.0.15",
+    "recharts": "3.6.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
