feat: Enhance Resume Wizard with Resume Mode and Options
- Updated ResumeWizard component to support different resume modes (AI and manual).
- Refactored option selection to include resume mode in the onSelectOption callback.
- Introduced new types for Wizard options and updated the options array accordingly.
- Improved state management in useCareerToolsState to handle resume modes and sections.
- Added local storage keys for managing resume drafts and modes.
- Enhanced VersionHistory component with tooltips for better user experience.
- Refactored EducationSection and ProjectsSection components for improved data handling and debouncing.
- Updated session management logic to handle missing session records and improve security logging.

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -21,30 +21,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@hireall/shared": "*",
-    "@tiptap/extension-character-count": "^3.4.4",
-    "@tiptap/extension-code-block": "^3.4.4",
-    "@tiptap/extension-code-block-lowlight": "^3.4.4",
-    "@tiptap/extension-color": "^3.4.4",
-    "@tiptap/extension-highlight": "^3.4.4",
-    "@tiptap/extension-image": "^3.4.4",
-    "@tiptap/extension-link": "^3.4.4",
-    "@tiptap/extension-placeholder": "^3.4.4",
-    "@tiptap/extension-subscript": "^3.4.4",
-    "@tiptap/extension-superscript": "^3.4.4",
-    "@tiptap/extension-table": "^3.4.4",
-    "@tiptap/extension-table-cell": "^3.4.4",
-    "@tiptap/extension-table-header": "^3.4.4",
-    "@tiptap/extension-table-row": "^3.4.4",
-    "@tiptap/extension-text-align": "^3.4.4",
-    "@tiptap/extension-text-style": "^3.4.4",
-    "@tiptap/extension-underline": "^3.4.4",
-    "@tiptap/pm": "^3.4.4",
-    "@tiptap/react": "^3.4.4",
-    "@tiptap/starter-kit": "^3.4.4",
-    "class-variance-authority": "^0.7.1",
     "firebase": "^10.13.1",
-    "lowlight": "^3.3.0",
-    "lucide-react": "^0.539.0",
     "posthog-js": "^1.311.0"
   },
   "devDependencies": {
@@ -54,10 +31,14 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.4",
     "dotenv-webpack": "^8.0.0",
     "eslint": "^8.45.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.4",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.4.5",
     "ts-loader": "^9.4.0",
     "webpack": "^5.88.0",
