--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "cd ../shared && npm run build",
-    "build": "tsc --noEmit && next build",
+    "build": "node -e \"require('fs').rmSync('.next',{recursive:true,force:true})\" && tsc --noEmit && next build",
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint src",
@@ -31,6 +31,7 @@
     "@heroicons/react": "^2.0.0",
     "@hireall/shared": "*",
     "@hookform/resolvers": "^5.2.2",
+    "@next/bundle-analyzer": "^16.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -60,6 +61,7 @@
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.18",
     "@tiptap/extension-character-count": "^3.4.4",
     "@tiptap/extension-code-block-lowlight": "^3.4.4",
     "@tiptap/extension-color": "^3.4.4",
