--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,8 @@
     "test:run": "node tests/run-tests.js"
   },
   "dependencies": {
+    "@auth/core": "^0.34.3",
+    "@convex-dev/better-auth": "^0.10.10",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -58,7 +60,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reactour/tour": "^3.8.0",
-    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.18",
@@ -81,14 +83,17 @@
     "@tiptap/react": "^3.4.4",
     "@tiptap/starter-kit": "^3.4.4",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/dotenv": "^6.1.1",
     "@types/jspdf": "^1.3.3",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.36.0",
     "autoprefixer": "^10.4.21",
+    "better-auth": "^1.4.15",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "convex": "^1.31.5",
     "csv-parse": "^6.1.0",
     "date-fns": "^3.6.0",
     "firebase": "^12.1.0",
@@ -140,6 +145,7 @@
     "@types/web-push": "^3.6.4",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "dotenv": "^8.6.0",
     "eslint": "^9",
     "eslint-config-next": "^16.0.8",
     "eslint-plugin-react": "^7.37.5",
