--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@hireall/shared": "*",
+    "convex": "^1.31.5",
     "firebase": "^10.13.1",
     "posthog-js": "^1.311.0"
   },
